--- a/.travis.yml
+++ b/.travis.yml
@@ -3,4 +3,4 @@ language: ruby
 cache: bundler
 rvm:
   - 2.7.0
-before_install: gem install bundler -v 2.0.1
+before_install: gem install bundler -v 2.1.0.pre.1
