--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,6 @@
 language: ruby
 cache: bundler
 rvm:
-  - 2.7.0
+  - 2.6.3
 before_install:
-  - gem install bundler
+  - gem install bundler '~> 2.0.1'
